--- a/packages/core/src/themes/styles-g100.scss
+++ b/packages/core/src/themes/styles-g100.scss
@@ -35,8 +35,7 @@ $gray_50: #8c8c8c;
 	  }
 	}
 	.legend-btn text {
-		fill: $text-03;
-		stroke: $text-03;
+		color:$text-03;
 	}
   }
 }
